styles.css
p,
input,
textarea {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

.inputBoxes {
    display: flex;
    flex-direction: column;
    margin: 1em;
    padding: 1em;
    width: inherit;
    align-items: center;
    z-index: 4;
}

.searchBar {
    width: 100%;
    max-width: 700px;
    min-width: 300px;
    background: rgb(81, 161, 196, 0.2);
    display: flex;
    align-items: center;
    border-radius: 50px;
    padding: 10px 20px;
}

.searchBar input {
    background: transparent;
    flex: 1;
    border: 0;
    outline: none;
    padding: 1rem 1rem;
    font-size: 1rem;
    color: black;
}

.searchBar img {
    /* width: 2rem; */
    height: 3.5rem;
}

body {
    background-color: white;
    height: 100vh;
    margin: 0rem;
    overflow: hidden;
}

.preloader {
    background: #51a1c4 url(images/loader.gif) no-repeat center center;
    height: 100%;
    width: 100%;
    position: fixed;
    display: flex;
    z-index: 100;
    transition: opacity 0.75s, visibility 0.75s;
}

.preloader--hidden { 
    opacity: 0;
    visibility: hidden;
}

.scrollable {
    overflow: scroll;
}

.topScrollButton {
    position: fixed;
    background-color: white;
    /* box-shadow: #EDEDED 0 10px 10px; */
    position: fixed;
    bottom: 20px;
    right: 20px;
    cursor: pointer;
    height: 50px;
    width: 50px;
    display: none;
    align-items: center;
    justify-content: center;
    border-radius: 15px;
    z-index: 10;
}

.topScrollButton img {
    height: 16px;
}

.topScrollButton:hover {
    cursor: pointer;
    transform: scale(1.2);
    transition: 0.8s all ease;
}

.gadgetsContainer {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    position: absolute;
    color: white;
    width: 100%;
}

.gadgetCard {
    display: flex;
    flex-direction: column;
    color: white;
    text-align: center;
    align-items: center;
    flex: 1 1 20%;
    margin: 1em;
    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
    border-radius: 10px;
    max-width: 25%;
}

@media (max-width: 768px) {
    .gadgetCard {
        max-width: 50%;
    }
}

.gadgetCard Img:hover {
    cursor: pointer;
    transform: translate(0px, -8px);
    transition: 0.8s all ease;
}

.gadgetPreview {
    z-index: 1000;
    background-color: rgb(255, 255, 255, 1);
    position: fixed;
    border-radius: 20px;
    align-items: center;
    text-align: center;
    width: 60%;
    /* height: 60%; */
}

.gadgetPreview p {
    z-index: 10;
    margin: 2em;
}

.gadgetPreview button {
    position: absolute;
    top: 0.5em;
    right: 0.5em;
    border: 0;
    border-radius: 50%;
    cursor: pointer;
    background: transparent;
}

.previewContainer {
    display: none;
    justify-content: center;
    align-items: center;
    height: 80vh;
    width: 99vw;
}

#overlay {
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    background-color: rgba(0, 0, 0, 0.2);
    pointer-events: none;
    display: none;
}

#suggestion-container {
    position: fixed;
}

ul {
    position: relative;
    top: 100%;
    left: 0;
    width: 100%;
    /* border: 1px solid gray; */
    background-color: inherit;
    padding: 0;
    margin: 0;
    list-style: none;
    display: none;
    z-index: 3;
}

ul.visible {
    display: block;
}

li {
    position: relative;
    z-index: 1000;
    padding: 0.5em 2em;
    cursor: pointer;
    background: rgb(81, 161, 196, 0.2)
}

li:hover {
    background-color: #f1f1f1;
}

